# lcs-openmp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  timer.h
include/: Solver.h
src/: Solver.cpp  main.cpp  solver.cpp
